<resources>
    <string name="app_name">Highscore tracker</string>
    <string name="game_selector_label">Select a game</string>
    <string name="robinson_crusoe">Robinson Crusoe</string>
    <string name="generic_game">Generic</string>
    <string name="new_score">New Score</string>
    <string name="game_title_label">Game title?</string>
    <string name="game_style_label">Cooperative?</string>
    <string name="coop_yes">Yes</string>
    <string name="coop_no">No</string>
    <string name="players">Players:</string>
    <string name="add_new_input">Add new input</string>
    <string name="player_score_label">Score:</string>
    <string name="save">Save</string>
    <string name="additional_info_label">Additional info:</string>
</resources>
