<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_title_label"
        android:id="@+id/game_title_label"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/game_title_input"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/additional_info_label"
        android:id="@+id/additional_info_label"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/additional_info_input" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_style_label"
        android:id="@+id/game_style_label"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coop_yes"
            android:id="@+id/coop_yes"
            android:padding="10dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coop_no"
            android:id="@+id/coop_no"
            android:padding="10dp"
            android:layout_marginRight="10dp" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/players"
        android:id="@+id/players"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/players_list">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/player_input"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1: "
                android:id="@+id/player_number"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/player_name"
                android:inputType="text"
                android:layout_weight="0.90" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_score_label"
                android:id="@+id/player_score_label"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/player_score"
                android:inputType="number"
                android:layout_weight="0.10" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/add_new_input"
                android:contentDescription="@string/add_new_input"
                android:src="@android:drawable/ic_input_add"
                android:adjustViewBounds="false" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/save_button_container">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/save_button"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="false"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp" />
    </RelativeLayout>

</LinearLayout>